[package]
name = "bakasable-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
rand = "0.8.5"
tempdir = "0.3.7"
thiserror = "2.0.3"
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["debug"] }
#
byteorder = "1.5.0"
chrono = "0.4.38"
num_enum = "0.7.3"
rstest = "0.23.0"
semver = "1.0.23"
tempfile = "3.14.0"
eyre = "0.6.12"
replace_with = "0.1.7"
clap = { version = "4.5.21", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
assert_matches = "1.5.0"
divan = "0.1.17"
rayon = "1.10.0"
